# wozzits-rhi

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
include/wozzits/rhi/: compute_program.h  constants_layout.h  draw_encode.h  draw_item.h  draw_list_tag.h  draw_packet.h  draw_packet_validation.h  frame_graph.h  geometry_view.h  gpu_resource.h  gpu_resource_registry.h  handle.h  program_registry.h  render_program.h  render_program_registry.h  shader_module.h  shader_resource_group.h  shader_resource_group_layout.h  tag_registry.h
tests/: compute_program_tests.cpp  constants_layout_tests.cpp  draw_encode_tests.cpp  draw_list_tag_tests.cpp  draw_packet_tests.cpp  frame_graph_execution_tests.cpp  frame_graph_tests.cpp  geometry_view_tests.cpp  gpu_resource_registry_tests.cpp  handle_tests.cpp  render_packet_contract_tests.cpp  render_packet_validation_tests.cpp  render_program_bridge_tests.cpp  render_program_registry_tests.cpp  shader_module_tests.cpp  shader_resource_group_layout_tests.cpp  shader_resource_group_tests.cpp  tag_registry_tests.cpp  wz_test.h
